📚 docs: add comprehensive README and update dependencies
- Add detailed README.md with architecture documentation
- Update requirements.txt with core dependencies
- Include project structure and setup instructions
- Add best practices and roadmap sections

--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,14 @@
-# folder data
+# --- DATA & LOGS (JANGAN DI-UPLOAD) ---
 data/
-# cache file python
-__pycache__/
-*pyc
-# environment
-.env
-venv/
-env/
+logs/
+*.db
+*.parquet
 
+# --- PYTHON CACHE ---
+__pycache__/
+*.pyc
+.ipynb_checkpoints/
+.pytest_cache/
+.env
+.venv/
+env/
